; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/stdio/extr_file.c_get_ioinfo_alloc_fd.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/stdio/extr_file.c_get_ioinfo_alloc_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__badioinfo = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @get_ioinfo_alloc_fd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_ioinfo_alloc_fd(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32* @get_ioinfo(i32 %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, @__badioinfo
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32*, i32** %4, align 8
  store i32* %10, i32** %2, align 8
  br label %19

11:                                               ; preds = %1
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @alloc_pioinfo_block(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %11
  store i32* @__badioinfo, i32** %2, align 8
  br label %19

16:                                               ; preds = %11
  %17 = load i32, i32* %3, align 4
  %18 = call i32* @get_ioinfo(i32 %17)
  store i32* %18, i32** %2, align 8
  br label %19

19:                                               ; preds = %16, %15, %9
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i32* @get_ioinfo(i32) #1

declare dso_local i32 @alloc_pioinfo_block(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
